--- a/auditor/auditor-frontend/src/Map.css
+++ b/auditor/auditor-frontend/src/Map.css
@@ -1,15 +1,117 @@
+/* Flexbox layout for stats, chart, and map */
 .container {
   display: flex;
+  flex-direction: row;
   width: 100vw;
   height: 100vh;
   overflow-y: hidden;
 }
 
+.left-container{
+  display: flex;
+  flex-direction: column;
+  flex-basis: 25%;
+  height: 100%;
+  overflow-y: auto;
+  /* flex: 1; */
+}
+
+.left-container h2{
+  margin-left: 20px;
+  margin-top: 10px;
+}
+
+.stats {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+
+.stats-container {
+  flex: 1;
+  background-color: #ffff;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+  /* align-items: center; */
+  margin: 10px 20px;
+}
+
+.stat-item {
+  display: flex;
+  justify-content: space-between; /* Align label to left and count to right */
+  align-items: center;
+  width: 100%;
+  margin-bottom: 10px;
+  font-size: 18px;
+}
+
+.stat-item .label {
+  font-weight: bold;
+  flex: 1;
+}
+
+.stat-item .count {
+  font-weight: bold;
+  flex: 0;
+  margin: 0 30px;
+}
+
+.info-icon {
+  margin-left: 5px;
+  cursor: pointer;
+  color: rgb(172, 172, 172); 
+}
+
+.success .label {
+  color: green; /* Green for success */
+}
+
+.incomplete .label {
+  color: orange; /* Orange for incomplete */
+}
+
+.failed .label {
+  color: red; /* Red for failed */
+}
+
+.unregistered .label {
+  color:#1E90FF /* Blue for unregistered */
+}
+
+.stats-container h2 {
+  margin-bottom: 18px;
+  font-size: 24px;
+}
+
+.stats-container .stats p {
+  font-size: 18px;
+  margin-bottom: 10px;
+  color: #5a5a5a
+}
+
+/* Chart Section */
+.bar-chart-container {
+  height: 100%;
+  flex: 2;
+  padding: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+  margin: 20px;
+  overflow: hidden;
+}
+
 /* Map Section */
 .map-section {
-  /* flex: 3; */
-  position: relative;
-  flex-basis: 100%;
+  /* flex: 3;  */
+  width: 100%;
+  height: 100%;
+  flex-basis: 75%;
+  /* flex: 1; */
 }
 
 .marker-green {
@@ -22,4 +124,90 @@
 
 .marker-red {
   filter: hue-rotate(-230deg) brightness(1); /* Adjust this value to get red */
+}
+
+.popup-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.7); /* Semi-transparent background */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000; /* Ensure it is above other elements */
+}
+
+.popup-content {
+  position: relative;
+  overflow-y: auto;
+  max-height: 50vh;
+  background: white;
+  padding: 30px;
+  border-radius: 8px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+  width: 50vw;
+  /* width: 100%; */
+}
+
+.popup-content ul {
+  list-style-type: decimal;
+  padding-left: 20px;
+}
+
+.close-popup {
+  position: absolute;
+  top: 24px;
+  right: 16px;
+  font-size: 22px; /* Adjust size as needed */
+  cursor: pointer;
+  color: rgb(161, 161, 161);
+}
+
+.popup-content h2 {
+  font-size: 24px;
+  margin-bottom: 5px;
+}
+
+/* Responsive styling for mobile */
+@media (max-width: 768px) {
+  /* Stack map on top and statistics/chart below */
+  .container {
+    flex-direction: column;
+    height: auto;
+    /* height: auto; */
+  }
+
+  .map-section {
+    flex-basis: auto;
+    order: 1; /* Adjust map is at the top on mobile */
+    height: 70vh; /* Adjust height of the map on mobile */
+    width: 100%;
+  }
+
+  .left-container {
+    width: 100%;
+    height: auto;
+    flex-basis: auto;
+    order: 2;
+    margin-top: 10px;
+  }
+
+  .stats-container, .bar-chart-container {
+    padding: 10px;
+  }
+
+  .left-container h2{
+    font-size: 16px;
+  }
+
+  .stats-container .stats p {
+    font-size: 16px;
+  }
+
+  .popup-content {
+    width: 90vw;
+  }
+
 }
