--- a/tenant/tenant-frontend/src/CameraPage.css
+++ b/tenant/tenant-frontend/src/CameraPage.css
@@ -1,11 +1,93 @@
 .full-screen {
   display: flex;
-  align-items: center;
   justify-content: center;
   margin: 0;
-  overflow: hidden;
-  height: 100vh;
+  min-height: 100vh; /* Full height minus header height */
+  overflow-y: auto; /* Allow scrolling */
+  padding: 20px;
+  overflow-y: auto; /* Allow scrolling */
+
+}
+
+.camera-container {
+  padding-top: 20px;
+  margin-top: 200px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  /* justify-content: flex-start; */
+  padding: 0;
+  background-color: #fff;
+  border: 1px solid #b4b4b4; 
+  border-radius: 10px; 
+  box-shadow: 0 4px 8px rgba(138, 138, 138, 0.2);
+  width: 60%;
+  max-height: auto; /* Restrict height to prevent overflow */
+  margin-bottom: 100px; 
+}
+
+.webcam-container {
+  position: relative; 
+  display: flex;
+  justify-content: center; /* Center the webcam horizontally */
+  align-items: center; /* Center the webcam vertically */
+  width: 100%; 
+  height: 100%; 
+  opacity: 1;
+  background-color: #fff;
+  opacity: 1;
+}
+
+.webcam-container video {
+  width: 80%;
+  height: 70vh; /* Let the webcam adjust its height based on the container */
+  object-fit: cover;
+}
+
+h2 {
+  color: #525252;
+}
+
+.message-text {
+  font-size: 16px;
+  color: #525252;
+}
+
+.camera-container button {
+  padding: 10px 20px;
+  margin-top: 10px;
+  cursor: pointer;
+  margin-bottom: 20px;
   position: relative;
+  z-index: 10;
+  align-self: center; /* Center button horizontally */
+
+}
+
+@media (max-width: 900px) {
+  .full-screen{
+    padding: 0;
+  }
+
+  .camera-container {
+    height: auto; /* Let content determine the height */
+    width: 100%;
+    padding-bottom: 60px; /* Add space at the bottom for the button */
+  }
+  
+  h2 {
+      font-size: 20px;
+  }
+
+  .message-text {
+      font-size: 13px !important;
+      text-align: center; 
+  }
+
+  .canvas-container{
+      top: 80px !important;
+      left: 60px !important;
+  }
 }
 
 .loading-overlay {
@@ -34,62 +116,4 @@
 @keyframes spin {
   0% { transform: rotate(0deg); }
   100% { transform: rotate(360deg); }
-}
-
-.camera-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  /* justify-content: flex-start; */
-  margin: 20px 10px 20px;
-  padding: 20px;
-  background-color: #fff;
-  border: 1px solid #b4b4b4; 
-  border-radius: 10px; 
-  box-shadow: 0 4px 8px rgba(138, 138, 138, 0.2);
-  width: 90%;
-  max-width: 600px;
-  position: relative;
-}
-
-.webcam-container {
-  position: relative; 
-  width: 80%; 
-  opacity: 1;
-  height: auto; 
-  margin: auto;
-  background-color: #fff;
-  opacity: 1;
-}
-
-h2 {
-  color: #525252;
-}
-
-.message-text {
-  font-size: 16px;
-  color: #525252;
-}
-
-button {
-  padding: 10px 20px;
-  margin-top: 10px;
-  cursor: pointer;
-}
-
-@media (max-width: 900px) {
-  
-  h2 {
-      font-size: 20px;
-  }
-
-  .message-text {
-      font-size: 13px !important;
-      text-align: center; 
-  }
-
-  .canvas-container{
-      top: 80px !important;
-      left: 60px !important;
-  }
 }
