--- a/tenant/tenant-frontend/src/ICEntryPage.css
+++ b/tenant/tenant-frontend/src/ICEntryPage.css
@@ -1,22 +1,28 @@
 .full-screen {
   display: flex;
+  flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;  /* Align content to the top */
   height: 100vh; 
-  margin: 0;
+  margin-top: -80px;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 .container {
+  margin: 0;
+  padding: 0;
   display: flex;
   flex-direction: column;
-  width: 800px;
+  width: 55%;
+  height: auto;
   align-items: center;
   justify-content: center;
-  margin: 20px 20px;
   border: 1px solid #b4b4b4; 
   border-radius: 10px; 
-  padding: 20px;
-  box-shadow: 0 4px 8px rgba(138, 138, 138, 0.2);
+  opacity: 1;
+  box-sizing: border-box;
+  box-shadow: 0 4px 8px rgb(138, 138, 138, 0.2);
 }
 
 h2 {
@@ -24,14 +30,23 @@ h2 {
 }
 
 .input {
+  margin: 20px;
   padding: 10px;
   font-size: 16px;
   width: 80%;
-  margin-top: 20px;
 }
 
 button {
   padding: 10px 20px;
   margin-top: 20px;
   cursor: pointer;
+  margin-bottom: 20px;
+}
+
+@media (max-width: 900px) {
+    
+  .container {
+      width: 100%;
+      padding: 20px;
+  }
 }
