--- a/tenant/tenant-frontend/src/CameraPage.css
+++ b/tenant/tenant-frontend/src/CameraPage.css
@@ -64,6 +64,52 @@ h2 {
 
 }
 
+.error-modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: rgba(0, 0, 0, 0.5); /* Dark semi-transparent background */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 9999;
+}
+
+.error-content {
+  background: white;
+  padding: 20px;
+  border-radius: 10px;
+  text-align: center;
+  max-width: 400px;
+  width: 100%;
+}
+
+.error-icon {
+  color: red;
+  font-size: 50px;
+  margin-bottom: 10px;
+}
+
+.error-message {
+  font-size: 16px;
+  margin-bottom: 20px;
+}
+
+.close-btn {
+  background-color: #ff4d4d;
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.close-btn:hover {
+  background-color: #ff1a1a;
+}
+
 @media (max-width: 900px) {
   .full-screen{
     padding: 0;
